<?xml version="1.0" encoding="utf-8"?>
<!--
  Created By : Daniel Jamison
  Copyright (c) 2013 South Dakota State University. All rights reserved.
 -->
<resources>

    <string name="app_version">0.1.0</string>
    <string name="version">Version:</string>
    
    <string name="app_name">Template</string>
    <string name="hello_world">Hello world!</string>
    <string name="igrow">iGrow</string>
    <string name="title_activity_main">Screen Sizes</string>
    
    <string name="menu_item1">Screen 1</string>
    <string name="menu_item2">Screen 2</string>
    <string name="menu_about">About</string>
    <string name="menu_disclaimer">Disclaimer</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_rate">Rate this app</string>
    <string name="menu_other_apps">See our other apps</string>
    <string name="menu_Options">Options</string>
    <string name="menu_Help">Help</string>
    
    <string name="disclaimer">The quality of information Feed Inventory provides depends on the quality of the information entered. To improve this information, different production stages might require varied feeding rations.

			\n\nThe South Dakota Board of Regents, South Dakota State University, iGrow, and SDSU Extension provide no claims or guarantees as to an individual\'s result based on the use of this mobile application, nor are they liable for any damages caused by its use, nor do they endorse any products or services that may be included herein.

          	\n\nFor questions and feedback regarding app content, contact sdsu.igrow@sdstate.edu.
          
          	\n\nFor technical issues and support, contact mobileapps@sdstate.edu.
          
          	\n\nCopyright 2013 the South Dakota Board of Regents\n\n</string>
          
    <string name="credits">Feed Inventory is provided by iGrow and SDSU Extension, which provide practical learning resources to address complex problems of youth and families, communities, agriculture, business, and industry.
			
			\n\nSDSU Extension
			\nHeather Gessner, Livestock Business Management Field Specialist
			
			\n\nDevelopment
			\nErik Ebsen
			\nDaniel Jamison
			\nKyle McCurry
			\nTerry Molengraaf
			\nSandeep Patel
			
			\n\nSouth Dakota State University, South Dakota counties, and U.S. Department of Agriculture cooperating.\n\n</string>

    <string name="about">Feed Inventory
        
        	\n\nDo you have an easy-to-use tool that allows you to input, store, and generate report data for your farming operation feedstuffs? Feed Inventory provides producers with snapshot information, allowing you to make better business decisions. 

			\n\nUse Feed Inventory to determine how long your current stockpile will last under current feeding conditions or to test other feeding rations you might use. With Feed Inventory, you can see quickly how far a given feed will go or how much more you need to get you where you need to be.
 
			\n\nFeed Inventory is not a feedstuff- or price-tracking tool. It provides one-time analysis of your feed stores (real or fictional) based on the feeding conditions you enter.
 
			\n\nFeed Inventory accepts a number of different potential feedstuffs (whether grains, forages, or supplements) and livestock from you, the producer, and lets you run the numbers to assist in making operational decisions.
        
			\n\nFor more information on this app and others, see the iGrow and SDSU Extension websites.\n\n</string>
			
    <string name="imagedesc">This is an image</string>
    <string name="ok">OK</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="add">New</string>
    <string name="delete">Delete</string>
    <string name="compare">Compare</string>
    <string name="export">Export/Email</string>
    <string name="verses">vs.</string>
    <string name="done">Done</string>
    <string name="other_apps">See our other apps</string>
    <string name="rate">Rate this app</string>
    
    <string name="type1">List View</string>
    <string name="type2">Universal</string>
    <string name="type3">V Universal</string>
    
    <string name="info1">Row 1</string>
    <string name="info2">Row 2</string>
    <string name="info3">Row 3</string>
    <string name="info4">Row 4</string>

</resources>