<?xml version="1.0" encoding="utf-8"?>
<!--
  Created By : Daniel Jamison
  Copyright (c) 2013 South Dakota State University. All rights reserved.
 -->
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@null"
    android:orientation="vertical">
    <TextView
        android:id="@+id/space"
		android:layout_width="fill_parent"
		android:layout_height="10dp"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
		android:background="@drawable/settings_tab_indicator_background_gap"/>
    
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/space"
	    android:layout_gravity="top"
	    android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
	    android:background="@drawable/settings_tab_indicator_background">
		<RelativeLayout
	        
	        android:id="@+id/relativeLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        >
		    <TextView
		        android:id="@+id/version"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:gravity="top"
		        android:text="@string/version"
		        android:textColor="@color/settings_text" 
		        android:textSize="15sp"/>
		    
			<TextView
		        android:id="@+id/versionNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/version"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:gravity="top"
		        android:text="@string/app_version"
		        android:textColor="@color/settings_text" 
		        android:textSize="15sp"/>
		    
		    <TextView
		        android:id="@+id/about"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:layout_below="@+id/versionNumber"
		        android:text="@string/about"
		        android:textColor="@color/settings_text" 
	            android:textColorLink="@color/settings_links"
		        android:textSize="15sp"/>
		    
		    <Button
	            android:id="@+id/rate"
	            android:layout_width="wrap_content"
	            android:layout_height="50dp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@+id/about"
	            android:layout_marginTop="20dp"
	            android:background="@drawable/button"
	            android:textSize="16sp"
	            android:textColor="@color/button_text"
	            android:onClick="rate"
	            android:text="@string/rate" />
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="20dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/rate"/>
	    </RelativeLayout>
	</ScrollView>
</RelativeLayout>

